--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -1,4 +1,4 @@
-name: ahj-hw4
+name: ahj-hw5_1
 
 on: [push, pull_request]
 
@@ -35,8 +35,8 @@ jobs:
       - name: Run linters
         run: npm run lint
 
-      # - name: Run test
-      #   run: npm run coverage
+      - name: Run test
+        run: npm run e2e
 
       - name: Build
         run: npm run build
